--- a/Arithmetic Exam Application/Arithmetic Exam Application/Task generator/task-info.yaml
+++ b/Arithmetic Exam Application/Arithmetic Exam Application/Task generator/task-info.yaml
@@ -159,5 +159,8 @@ files:
         ExamTest().run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/12803#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 14 Nov 2022 15:33:28 UTC
 record: -1
