--- a/Arithmetic Exam Application/course-remote-info.yaml
+++ b/Arithmetic Exam Application/course-remote-info.yaml
@@ -7,10 +7,10 @@ update_date: Mon, 14 Nov 2022 14:33:16 UTC
 stages:
 - id: 893
   step: 12802
-  is_completed: false
+  is_completed: true
 - id: 894
   step: 12803
-  is_completed: false
+  is_completed: true
 - id: 895
   step: 12804
   is_completed: false
