--- a/Arithmetic Exam Application/Arithmetic Exam Application/Adding marks/task-info.yaml
+++ b/Arithmetic Exam Application/Arithmetic Exam Application/Adding marks/task-info.yaml
@@ -406,6 +406,13 @@ files:
     if __name__ == '__main__':
         ExamTest().run_tests()
   learner_created: false
+- name: results.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/12805#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Tue, 15 Nov 2022 15:15:11 UTC
 record: -1
