--- a/Arithmetic Exam Application/course-remote-info.yaml
+++ b/Arithmetic Exam Application/course-remote-info.yaml
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 896
   step: 12805
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Introduction to Python
