--- a/Bill Splitter/Bill Splitter/The Lucky One/task-info.yaml
+++ b/Bill Splitter/Bill Splitter/The Lucky One/task-info.yaml
@@ -65,6 +65,6 @@ files:
     if __name__ == '__main__':
         BillSplitterTest().run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/175/stages/903/implement#comment
+feedback_link: https://hyperskill.org/learn/step/12900#comment
 status: Unchecked
 record: -1
