--- a/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
+++ b/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
@@ -103,6 +103,6 @@ files:
     if __name__ == '__main__':
         BillSplitterTest().run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/175/stages/904/implement#comment
+feedback_link: https://hyperskill.org/learn/step/12901#comment
 status: Unchecked
 record: -1
