Bill Splitter - Stage 4/4

--- a/Bill Splitter/course-remote-info.yaml
+++ b/Bill Splitter/course-remote-info.yaml
@@ -13,10 +13,10 @@ stages:
   is_completed: true
 - id: 903
   step: 12900
-  is_completed: false
+  is_completed: true
 - id: 904
   step: 12901
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Introduction to Python
