--- a/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
+++ b/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
@@ -104,5 +104,9 @@ files:
         BillSplitterTest().run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/12901#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Fri, 18 Nov 2022 06:31:30 UTC
 record: -1
