Password Hacker - Stage 2/5

--- a/Password Hacker/Password Hacker/Simple brute force/task-info.yaml
+++ b/Password Hacker/Password Hacker/Simple brute force/task-info.yaml
@@ -138,5 +138,8 @@ files:
         test.stop_server()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/80/stages/443/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 20 Nov 2022 12:27:31 UTC
 record: -1
