--- a/Password Hacker/Password Hacker/Smarter, dictionary-based brute force/task-info.yaml
+++ b/Password Hacker/Password Hacker/Smarter, dictionary-based brute force/task-info.yaml
@@ -146,6 +146,15 @@ files:
         test.run_tests()
         test.stop_server()
   learner_created: false
+- name: hacking/passwords.txt
+  visible: true
+  learner_created: true
+- name: passwords.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/80/stages/444/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 20 Nov 2022 13:23:38 UTC
 record: -1
