--- a/Password Hacker/course-remote-info.yaml
+++ b/Password Hacker/course-remote-info.yaml
@@ -10,10 +10,10 @@ stages:
   is_completed: true
 - id: 443
   step: 7217
-  is_completed: false
+  is_completed: true
 - id: 444
   step: 7218
-  is_completed: false
+  is_completed: true
 - id: 445
   step: 7219
   is_completed: false
