--- a/Password Hacker/course-remote-info.yaml
+++ b/Password Hacker/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/255258/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Sun, 20 Nov 2022 14:13:17 UTC
 stages:
 - id: 442
   step: 7216
@@ -16,10 +16,10 @@ stages:
   is_completed: true
 - id: 445
   step: 7219
-  is_completed: false
+  is_completed: true
 - id: 446
   step: 7220
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Binary numbers
